# valdo-gtk

./: .gitmodules  README.md  cz.pervoj.valdo-gtk.json  generate-pot.sh  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml
build-aux/flatpak/: cz.pervoj.devel.valdo-gtk.json  cz.pervoj.valdo-gtk.Devel.json
data/: cz.pervoj.valdo-gtk.desktop.in  cz.pervoj.valdo-gtk.gschema.xml  cz.pervoj.valdo-gtk.metainfo.xml.in  meson.build
data/icons/: meson.build
docs/: index.html
po/: LINGUAS  POTFILES  cs.po  es.po  it.po  nl.po  valdo-gtk.pot
src/: app.vala  form-list-item.vala  list-item.vala  main-window.vala  meson.build  page-projects.vala  page-success.vala  page-templates.vala  page-variables.vala  preferences-window.vala
ui/: form-list-item.glade  list-item.glade  main-window.glade  meson.build  no-projects.glade  page-creating-success.glade  page-list-available-templates.glade  page-list-creating-success.glade  page-list-latest-projects.glade  page-list-template-variables.glade  preferences-window.glade  resources.xml
vapi/: config.vapi
